--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "ejs": "^2.6.1",
     "vue": "^2.5.2",
     "vue-authenticate": "^1.3.4",
     "vue-material": "latest",
