--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue": "^2.5.2",
     "vue-authenticate": "^1.3.4",
     "vue-material": "latest",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuetify": "^1.3.12"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
