--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "bunyan": "^1.8.12",
     "restify": "^7.7.0",
@@ -21,6 +22,7 @@
     "restify-plugins": "^1.6.0",
     "siamese": "^2.0.11",
     "vue": "^2.5.2",
+    "vue-axios": "^2.1.4",
     "vue-material": "latest",
     "vue-router": "^3.0.1"
   },
