--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name":"techmeetups.ph-front",
+  "name": "techmeetups.ph-front",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -12,30 +12,29 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.0.0-beta.5",
-    "@angular/animations": "^7.1.4",
-    "@angular/cdk": "^7.2.1",
-    "@angular/common": "~7.1.0",
-    "@angular/compiler": "~7.1.0",
-    "@angular/core": "~7.1.0",
-    "@angular/forms": "~7.1.0",
-    "@angular/material": "^7.2.1",
-    "@angular/platform-browser": "~7.1.0",
-    "@angular/platform-browser-dynamic": "~7.1.0",
-    "@angular/router": "~7.1.0",
-    "@ng-bootstrap/ng-bootstrap": "^4.0.1",
+    "@angular/animations": "^8.2.2",
+    "@angular/cdk": "^8.2.2",
+    "@angular/common": "~8.2.0",
+    "@angular/compiler": "~8.2.0",
+    "@angular/core": "~8.2.0",
+    "@angular/forms": "~8.2.0",
+    "@angular/platform-browser": "~8.2.0",
+    "@angular/platform-browser-dynamic": "~8.2.0",
+    "@angular/router": "~8.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.0",
     "@types/socket.io-client": "^1.4.32",
-    "bootstrap": "^4.2.1",
+    "axios": "^0.19.0",
     "core-js": "^2.5.4",
     "howler": "^2.1.1",
     "ngx-cacheable": "^1.0.9",
-    "rxjs": "~6.3.3",
+    "rxjs": "^6.4.0",
     "socket.io-client": "^2.2.0",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.11.0",
-    "@angular/cli": "~7.1.2",
+    "@angular/cli": "~8.2.2",
     "@angular/compiler-cli": "~7.1.0",
     "@angular/language-service": "~7.1.0",
     "@types/node": "~8.9.4",
