--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "axios": "^0.19.0",
     "core-js": "^2.5.4",
     "howler": "^2.1.1",
+    "mysql": "^2.17.1",
+    "mysql-migrations": "^1.0.6",
     "ngx-cacheable": "^1.0.9",
     "rxjs": "^6.4.0",
     "socket.io-client": "^2.2.0",
